[metadata]
name = openqasm-pygments
version = 0.1.0
url = https://openqasm.github.io/openqasm-pygments
description = Pygments tools for OpenQASM
long_description = file: README.md
long_description_content_type = text/markdown; variant=GFM
license = Apache 2.0 License
license_files = LICENSE
project_urls =
    Bug Tracker = https://github.com/openqasm/openqasm-pygments/issues
    Documentation = https://openqasm.github.com/openqasm-pygments
    Source Code = https://github.com/openqasm/openqasm-pygments
author = OpenQASM contributors

[options]
packages = find:
package_dir =
    = src
install_requires =
    Pygments ~= 2.0
    importlib_meta; python_version < "3.8"

[options.packages.find]
where = src/

[options.entry_points]
pygments.lexers =
    openqasm2_lexer = openqasm_pygments:OpenQASM2Lexer
    openqasm3_lexer = openqasm_pygments:OpenQASM3Lexer
    openpulse_lexer = openqasm_pygments:OpenPulseLexer

[options.extras_require]
; This is a dummy option for now, just added for consistency, and in case we
; want to add more extras in the future.
all =
